@@ -19,11 +19,15 @@ if path.basename(sys.argv[0]) != 'nicos-console':
 parser = optparse.OptionParser()
 parser.add_option('-s', '--simulate', dest='simulate', action='store_true',
                   help='start in simulation mode')
+parser.add_option('-c', '--nocreate', dest='noautocreate', action='store_true',
+                  help='do not autocreate devices')
 parser.add_option('-n', '--nocolor', dest='nocolor', action='store_true',
                   help='disable colorization')
 opts, args = parser.parse_args()
 
 if opts.nocolor:
     nocolor()
+
+ConsoleSession.autocreate_devices = not opts.noautocreate
 
 ConsoleSession.run(args[0] if args else (symname or 'startup'), opts.simulate)
